[gd_scene load_steps=9 format=2]

[ext_resource path="res://nodes/HintPanelItem.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/AbyssinicaSIL-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/items.png" type="Texture" id=3]
[ext_resource path="res://assets/ui/red_line.png" type="Texture" id=4]
[ext_resource path="res://assets/fonts/birchstd.OTF" type="DynamicFontData" id=5]
[ext_resource path="res://assets/ui/ui_items.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 99
outline_size = 5
extra_spacing_char = -1
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 36
outline_color = Color( 0.168627, 0.168627, 0.168627, 1 )
use_mipmaps = true
use_filter = true
extra_spacing_top = 5
extra_spacing_bottom = 5
font_data = ExtResource( 2 )

[node name="HintPanelItem" type="ColorRect"]
margin_right = 581.0
margin_bottom = 131.0
rect_pivot_offset = Vector2( 291, 66 )
color = Color( 0.0588235, 0.0588235, 0.0588235, 0 )
script = ExtResource( 1 )

[node name="HintNode" type="Sprite" parent="."]
visible = false
position = Vector2( 26, 42 )
scale = Vector2( 1.4, 1.4 )
texture = ExtResource( 3 )
hframes = 3
vframes = 4
frame = 10

[node name="Sprite2" type="Sprite" parent="."]
visible = false
position = Vector2( 26, 42 )
scale = Vector2( 1.4, 1.4 )
texture = ExtResource( 3 )
hframes = 3
vframes = 4

[node name="bg" type="TextureRect" parent="."]
margin_left = -81.0
margin_top = -29.0
margin_right = 656.0
margin_bottom = 318.0
mouse_filter = 2
texture = ExtResource( 6 )
expand = true

[node name="lb_name" type="Label" parent="."]
margin_left = 12.0
margin_top = 24.0
margin_right = 576.0
margin_bottom = 124.0
custom_colors/font_color = Color( 0.505882, 0.121569, 0.0588235, 1 )
custom_constants/line_spacing = -1
custom_fonts/font = SubResource( 1 )
text = "ESCOPETA"
align = 1
valign = 1
autowrap = true

[node name="l1" type="TextureRect" parent="."]
visible = false
margin_left = 25.0
margin_top = 124.0
margin_right = 605.0
margin_bottom = 126.0
mouse_filter = 2
texture = ExtResource( 4 )
expand = true

[node name="lb_desc" type="Label" parent="."]
margin_left = 30.0
margin_top = 108.0
margin_right = 565.0
margin_bottom = 275.0
custom_colors/font_color = Color( 0.843137, 0.843137, 0.843137, 1 )
custom_constants/line_spacing = -1
custom_fonts/font = SubResource( 2 )
text = "Hace un disparo que causa 1 da√±o al primer enemigo."
align = 1
valign = 1
autowrap = true
